# stellield

./: .env.production.example  .gitignore  CCTP-INTEGRATION.md  CCTP-MIGRATION.md  IMPLEMENTATION-SUMMARY.md  README.md  aggregator-plan.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
agent/: .env.example  .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  pyproject.toml  requirements.txt  run_server.py  test_install.py
agent/examples/: portfolio_optimization.py  simple_recommendation.py
agent/src/: __init__.py  main.py
agent/src/agent/: __init__.py  gemini_client.py  recommendation_engine.py
agent/src/api/: __init__.py  server.py
agent/src/data/: __init__.py  aggregator.py  defillama_fetcher.py  risk_scorer.py  stellar_fetcher.py
agent/src/models/: __init__.py  recommendation.py  yield_opportunity.py
agent/src/utils/: __init__.py  cache.py  logger.py
agent/tests/: __init__.py  test_models.py  test_risk_scorer.py
apps/docs/: README.md  package.json
apps/server/: .env.example  README.md  package.json  tsconfig.json  tsdown.config.ts
apps/web/: .env.example  (+3 more)
bridge/: .env.example  .gitignore  README.md  hardhat.config.ts  package.json
contract/: .env.example  .gitignore  CCTP_MESSAGE_HASH_FIX.md  README.md  SETUP.md  package.json  pnpm-workspace.yaml
docker/: .dockerignore  README.md  agent.Dockerfile  docs.Dockerfile  server.Dockerfile  web.Dockerfile
plan/: implementation-roadmap.md  stage-00-foundation.md
scraper/: .gitignore  INSTALL.md  PROJECT_SUMMARY.md  README.md  USAGE.md  go.mod
(+131 files in other folders)
